endpoint "/toptensongs" was added.